OracleWebCenterPortal/kubernetes/charts/ingress-per-domain/tls/nginx-tls.yaml
# Copyright (c) 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcpns-ingress
  namespace: wcpns
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: 'cookie'
    nginx.ingress.kubernetes.io/affinity-mode: 'persistent'
    nginx.ingress.kubernetes.io/session-cookie-name: 'sticky'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/session-cookie-expires: '172800'
    nginx.ingress.kubernetes.io/session-cookie-max-age: '172800'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'domain1.org'
      secretName: wcp-domain-tls-cert
  rules:
    - host: 'domain1.org'
      http:
        paths:
          - backend:
              service:
                name: wcp-domain-cluster-wcp-cluster
                port:
                  number: 8788
            pathType: ImplementationSpecific
