OracleWebCenterPortal/kubernetes/charts/ingress-per-domain/tls/traefik-tls.yaml
# Copyright (c) 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: wcp-domain-cluster-routetcp
  namespace: wcpns
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`wcp-domain.example.org`)
      services:
      - name: wcp-domain-cluster-wcp-cluster
        port: 8788
        weight: 3
        terminationDelay: 400
  tls:
    passthrough: true
